# libpluie-echo

./: .gitignore  README.md  install.vala.in  main.vala  meson.build  pluie_echo.h  valadoc.sh
doc/: index.html  style.css
doc/pluie-echo-0.1/: Pluie.Color.Color.html  Pluie.Color.bg.html  Pluie.Color.bold.html  Pluie.Color.fg.html  Pluie.Color.html  Pluie.Color.off.html  Pluie.Color.s.html  Pluie.Color.to_string.html  Pluie.ColorConf.@get.html  Pluie.ColorConf.ColorConf.html  Pluie.ColorConf.html  Pluie.ColorConf.param.html  Pluie.Dbg.@in.html  Pluie.Dbg.@out.html  Pluie.Dbg.DBG_ENABLED.html  Pluie.Dbg.DBG_ENTER.html  Pluie.Dbg.DBG_ERROR.html  Pluie.Dbg.DBG_INLINE.html  Pluie.Dbg.DBG_LEAVE.html  Pluie.Dbg.DBG_WARN.html  Pluie.Dbg.error.html  Pluie.Dbg.html  Pluie.Dbg.init.html  Pluie.Dbg.log.html  Pluie.Dbg.msg.html  Pluie.ECHO.ACTION.html  Pluie.ECHO.ARG.html  Pluie.ECHO.ARG_SEP.html  Pluie.ECHO.COMMENT.html  Pluie.ECHO.DATE.html  Pluie.ECHO.DEFAULT.html  Pluie.ECHO.DONE.html  Pluie.ECHO.ENTER.html  Pluie.ECHO.ERROR.html  Pluie.ECHO.FAIL.html  Pluie.ECHO.FILE.html  Pluie.ECHO.ITEM.html  Pluie.ECHO.KEY.html  Pluie.ECHO.LEAVE.html  Pluie.ECHO.MICROTIME.html  (+50 more)
doc/pluie-echo-0.2/: Pluie.Color.Color.html  Pluie.Color.bg.html  Pluie.Color.bold.html  Pluie.Color.fg.html  Pluie.Color.html  Pluie.Color.off.html  Pluie.Color.s.html  Pluie.Color.to_string.html  Pluie.ColorConf.@get.html  Pluie.ColorConf.ColorConf.html  Pluie.ColorConf.html  Pluie.ColorConf.param.html  Pluie.Dbg.@in.html  Pluie.Dbg.@out.html  Pluie.Dbg.DBG_ENABLED.html  Pluie.Dbg.DBG_ERROR.html  Pluie.Dbg.DBG_WARN.html  Pluie.Dbg.error.html  Pluie.Dbg.html  Pluie.Dbg.init.html  (+71 more)
resources/: doc-style.css  echo.ini
samples/: echo.ini  pluie-cmd.vala  pluie-color.vala  pluie-outputFormatter.vala
src/: Pluie.Color.vala  Pluie.ColorConf.vala  Pluie.Dbg.vala  Pluie.OutputFormatter.vala  Pluie.Sys.Cmd.vala  Pluie.global.vala
